# fastmsg

./: .conf  Cargo.toml  com.kritjo.fastmsg.plist  install_service.sh  uninstall_service.sh
notification-helper/: .gitignore  README.md
notification-helper/notification-helper/: main.m  notification-helper-Prefix.pch
notification-helper/notification-helper.xcodeproj/: project.pbxproj
notification-helper/notification-helper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
notification-helper/notification-helper.xcodeproj/xcshareddata/xcschemes/: usernotification.xcscheme
src/: agent.rs  config_utils.rs  main.rs
