[package]
name = "fastmsg-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.36"
rsa = "0.6.1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "fastmsg-agent"
path = "src/agent.rs"

[[bin]]
name = "fastmsg"
path = "src/main.rs"